Fix fullscreen on mobile devices.

--- a/app/assets/stylesheets/pages/show.css.sass
+++ b/app/assets/stylesheets/pages/show.css.sass
@@ -1,4 +1,5 @@
 .images
+  padding: 0
   height: 100%
 
 // Menu get back on wide screen !
